Fixed clipping of badges on folders

--- a/css/GuildbarRevert.css
+++ b/css/GuildbarRevert.css
@@ -118,6 +118,10 @@ nav[class*="guilds_"] {
         }
     }
 
+    [class*="folderButton__"] {
+        overflow: visible;
+    }
+    
     [class*="folderIcon__"] {
         svg {
             width: 24px !important;
